'修改驗證碼與群發功能重疊bug'

--- a/web/audience.html
+++ b/web/audience.html
@@ -14,12 +14,13 @@
 	<body class="subpage">
 		<!-- Header -->
 		<header id="header">
-			<h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID:@etx7735c&emsp;&emsp;邀請碼:<a id="WebId"></a></a></a></h1>
-			<form id="SaySomething" style="display:inline; position:relative; right:400px;" method="POST">
-				<input style="width:300px; display:inline;" id="say" name="say" type="text" placeholder="請輸入要發送至觀眾的訊息/圖片" onclick="clear()">
-				<input id=image name="image" type="File" onclick="clear()">
-				<input id=sent_button type="button" value="送出" style="background: gray" onclick="say_something()" /><font color=red><span id=box></span></font>
-			</form>
+			<h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID:@etx7735c&emsp;&emsp;邀請碼:<a id="WebId"></a></a></a>&emsp;&emsp;
+				<form id="SaySomething" style="display:inline" method="POST">
+					<input style="width:300px; display:inline;" id="say" name="say" type="text" placeholder="請輸入要發送至觀眾的訊息/圖片" onclick="clear()">
+					<input id=image name="image" type="File" onclick="clear()">
+					<input id=sent_button type="button" value="送出" style="background: gray" onclick="say_something()" /><font color=red><span id=box></span></font>
+				</form>
+			</h1>
 			<a href="#menu">選單</a>
 		</header>
 		<!-- Nav -->
