使用說明書與演講總表

--- a/web/notelist.html
+++ b/web/notelist.html
@@ -31,7 +31,7 @@
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
         <script src="assets/js/jquery.cookie.js"></script>
-        <script src="assets/js/testlist.js"></script>
+        <script src="assets/js/notelist.js"></script>
 		<script src="assets/js/lib.js"></script>
 	</body>
 </html>
