Update voting result

--- a/web/voting.html
+++ b/web/voting.html
@@ -47,6 +47,7 @@
 
 		<div id=allvote>
 			<section id="vote1" class="wrapper style1">
+				<input type=button id=sAdd value=Add>
 				<div class="inner"><ul class="va"></ul></div>
 			</section>
 			</div>
