--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,8 @@
 			<center><input type=text id=MeetName name=MeetName style="height:40px;width:400px"></center><br />
 			<h3>請輸入演講細節</h3>
 			<center><input type=text id=MeetDetail name=MeetDetail style="height:40px;width:400px"></center><br />
+			<h3>請輸入 Beacon 代碼</h3>
+			<center><input type=text id=Beacon name=Beacon style="height:40px;width:400px"></center><br />
 			<h3>請輸入驗證碼</h3>
 			<center><input type=text id=SentId name=SentId style="height:40px;width:400px"></center><br /><br />
 			<button style="position:relative; right:-122px;" class="button big alt scrolly" onclick="document.getElementById('id01').style.display='block'">請輸入簡報網頁</button>
